--- a/subl/makefile.sublime-snippet
+++ b/subl/makefile.sublime-snippet
@@ -6,7 +6,7 @@ NAME	= ${1:lib_name}
 
 SRC		=
 
-OBJ		=
+OBJ		= $(SRC:.c=.o)
 
 INCLUDE	=
 
@@ -24,8 +24,10 @@ clean:
 fclean: clean
 	@ rm -f \$(NAME)
 
+re: fclean all
+
 src:
-	@ ls | grep .c\$ | xargs | sed 's/ / \\\n\t\t/g'
+	@ ls | grep .c\$ | xargs | sed 's/ / \\\\\n\t\t/g'
 
 .PHONY: all clean fclean re src
 ]]></content>
